<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.brandondlim.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/AppTheme.center"
        android:text="@string/title" />

    <Button
        android:id="@+id/popular_movies"
        style="@style/AppTheme.center"
        android:text="@string/popular_movies"
        android:onClick="buttonPressed"/>

    <Button
        android:id="@+id/stock_hawk"
        style="@style/AppTheme.center"
        android:text="@string/stock_hawk"
        android:onClick="buttonPressed"/>

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/AppTheme.center"
        android:text="@string/build_it_bigger"
        android:onClick="buttonPressed"/>

    <Button
        android:id="@+id/make_your_app_material"
        style="@style/AppTheme.center"
        android:text="@string/make_your_app_material"
        android:onClick="buttonPressed"/>

    <Button
        android:id="@+id/go_ubiquitous"
        style="@style/AppTheme.center"
        android:text="@string/go_ubiquitous"
        android:onClick="buttonPressed"/>

    <Button
        android:id="@+id/capstone"
        style="@style/AppTheme.center"
        android:text="@string/capstone"
        android:onClick="buttonPressed"/>

</LinearLayout>
